# pingv4

./: .gitignore  Cargo.toml  README.md  game.py  game_test.py  main.py  population.txt  pyproject.toml  test.py
results/: tournament_results.json
src/: lib.rs
src/connect_four/: board.rs  mod.rs
src/connect_four/state/: mod.rs
src/core/game/: board.rs  cell.rs  error.rs  mod.rs  state.rs  test.rs
src/pingv4/: __init__.py  _core.pyi  bot.py  game.py
src/wrapper/: game_wrapper.rs  mod.rs
submissions/: aa371.py  aa557.py  aa740.py  ae990.py  as637.py  as658.py  as770.py  at612.py  fart.py  faulty.py  hb969.py  jizz.py  la390.py  maximin.py  mp282.py  nonfaulty.py  pa896.py  pee.py  poop.py  ps950.py  ra830.py  sj993.py  sr255.py  ss691.py  ys617.py
submissions/temp/: as264.py  ps950.py
